--- a/anniversaire/index.html
+++ b/anniversaire/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container text-center card card-bg">
-         <h1 class="text-warning fw-bold mt-5">Les meilleurs voeux viennent du monde pout toi!</h1>
+         <h1 class="text-warning bg-white rounded-pill fw-bold mt-5">Les meilleurs voeux viennent du monde pour toi!</h1>
         <div class="en text-dark fw-semibold display-6 mt-5 bg-light">
             Happy birthday!
         </div>
@@ -24,7 +24,7 @@
         <div class="cn text-danger fw-semibold display-6 mt-5 bg-light">
             生日快乐!
         </div>
-        <div><img src="https://img.freepik.com/vecteurs-premium/poulet-eclosion-oeuf-processus-naissance-poussin-dessin-anime-petit-bebe-oiseau-emergeant-coquille-fissuree-oeuf-animal-domestique-drole-illustration-amusante-educative-pour-enfants_87946-3473.jpg?w=826" alt="img-fluid" class="rounded-circle mt-3"></div>
+        <div class="mx-auto"><img src="https://img.freepik.com/vecteurs-premium/poulet-eclosion-oeuf-processus-naissance-poussin-dessin-anime-petit-bebe-oiseau-emergeant-coquille-fissuree-oeuf-animal-domestique-drole-illustration-amusante-educative-pour-enfants_87946-3473.jpg?w=826" alt="img-fluid" class="rounded-circle mt-3"></div>
     </div>
 
     <!-- JavaScript Bundle with Popper -->
